testes&&conteudo_materia/compiling_error.txt
/home/victor/github/ProgramasEmC1/testes&&conteudo_materia/ordenacrescente_vetor.c: In function ‘maior_ultimo’:
/home/victor/github/ProgramasEmC1/testes&&conteudo_materia/ordenacrescente_vetor.c:30:9: warning: passing argument 1 of ‘swap’ makes pointer from integer without a cast [-Wint-conversion]
   swap (vx[nx],vx[t])
         ^~
/home/victor/github/ProgramasEmC1/testes&&conteudo_materia/ordenacrescente_vetor.c:20:6: note: expected ‘int *’ but argument is of type ‘int’
 void swap (int * a,int * b){
      ^~~~
/home/victor/github/ProgramasEmC1/testes&&conteudo_materia/ordenacrescente_vetor.c:30:16: warning: passing argument 2 of ‘swap’ makes pointer from integer without a cast [-Wint-conversion]
   swap (vx[nx],vx[t])
                ^~
/home/victor/github/ProgramasEmC1/testes&&conteudo_materia/ordenacrescente_vetor.c:20:6: note: expected ‘int *’ but argument is of type ‘int’
 void swap (int * a,int * b){
      ^~~~
/home/victor/github/ProgramasEmC1/testes&&conteudo_materia/ordenacrescente_vetor.c:31:1: error: expected ‘;’ before ‘}’ token
 }
 ^
/home/victor/github/ProgramasEmC1/testes&&conteudo_materia/ordenacrescente_vetor.c: In function ‘ordena’:
/home/victor/github/ProgramasEmC1/testes&&conteudo_materia/ordenacrescente_vetor.c:39:23: warning: passing argument 1 of ‘maior_ultimo’ makes pointer from integer without a cast [-Wint-conversion]
         maior_ultimo (vy[0],i);
                       ^~
/home/victor/github/ProgramasEmC1/testes&&conteudo_materia/ordenacrescente_vetor.c:27:6: note: expected ‘int *’ but argument is of type ‘int’
 void maior_ultimo (int vx[],int nx){
      ^~~~~~~~~~~~
/home/victor/github/ProgramasEmC1/testes&&conteudo_materia/ordenacrescente_vetor.c: In function ‘print’:
/home/victor/github/ProgramasEmC1/testes&&conteudo_materia/ordenacrescente_vetor.c:44:10: error: ‘i’ undeclared (first use in this function)
     for (i = 0; i >= 0; i--) {
          ^
/home/victor/github/ProgramasEmC1/testes&&conteudo_materia/ordenacrescente_vetor.c:44:10: note: each undeclared identifier is reported only once for each function it appears in
/home/victor/github/ProgramasEmC1/testes&&conteudo_materia/ordenacrescente_vetor.c:46:7: error: ‘v’ undeclared (first use in this function)
     } v[i]
       ^
/home/victor/github/ProgramasEmC1/testes&&conteudo_materia/ordenacrescente_vetor.c:47:1: error: expected ‘;’ before ‘}’ token
 }
 ^
